fix base content style

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 {% include 'navbar.html' %}
-<div class="content" style="text-align: center;">
+<div class="content">
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
