model run config shared with Flask-Session & add gfs backup with soft links for related run & move to Flask-WTF with validation

--- a/app/run_wrf/templates/run_wrf/domain.html
+++ b/app/run_wrf/templates/run_wrf/domain.html
@@ -10,6 +10,7 @@
 </div>
 
 <h2> 3) Model etki alanını kontrol edin. <br>Bir önceki sayfaya giderek girdiğiniz değerleri değiştirebilirsiniz.</h2>
+{# TODO: Lose below form and use a linked button #}
 <form method="post" action="{{ url_for('run_wrf_bp.domain') }}">
     <div>
         <br>
@@ -23,5 +24,4 @@
                onclick="var modal = document.getElementById('myModal');modal.style.display = 'block';">
 <br><br><br>
 </form>
-
 {% endblock content %}
