--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="home">
-    <p>Welcome to WRF-ONLINE</p>
+    <h2 style="padding-top: 20px;">Welcome to WRF-ONLINE</h2>
 </div>
 {% endblock %}
