--- a/app/run_wrf/templates/run_wrf/run.html
+++ b/app/run_wrf/templates/run_wrf/run.html
@@ -1,98 +1,78 @@
 {% extends 'base.html' %}
 {% block content %}
 <div id="myModal" class="modal">
-  <!-- Modal content -->
-  <div class="modal-content">
-      <div class="loader"></div>
-    <p>Verileriniz indiriliyor. Lütfen bekleyiniz.</p>
-  </div>
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="loader"></div>
+        <p>Verileriniz indiriliyor. Lütfen bekleyiniz.</p>
+    </div>
 </div>
 
-    <form method="post" action="{{ url_for('run_wrf_bp.run_wrf') }}">
-        <h2>1)   GFS (0.5) verileri indirilir ve ungrib programı çalıştırılır.</h2>
+<h2>{{ form.title }}</h2>
+<form method="post" action="{{ url_for('run_wrf_bp.run_wrf') }}">
+    {{ form.csrf_token }}
+    <br>
+    {% if form.errors %}
+        <ul class="errors">
+            {% for error in form.errors %}
+            <li style="">{{ form.errors[error][0] }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    <table>
+        <tbody>
+        <tr>Simülasyon Başlangıç Tarihi &nbsp &nbsp &nbsp &nbsp
+            {{ form.start_date }}
+        </tr>
         <br>
         <br>
+        <tr>Simülasyon Başlangıç Saati &nbsp &nbsp &nbsp
+            {% for subfield in form.start_hour %}
+            {{ subfield }}{{ subfield.label }} &nbsp
+            {% endfor %}
+        </tr>
         <br>
-        <table>
-          <tbody>
+        <br>
+        <tr>Simülasyon Bitiş Tarihi &nbsp &nbsp &nbsp &nbsp
+            {{ form.end_date }}
+        </tr>
+        <br>
+        <br>
+        <tr>&nbsp &nbsp &nbsp Simülasyon Bitiş Saati &nbsp &nbsp
+            {% for subfield in form.end_hour %}
+            {{ subfield }}{{ subfield.label }} &nbsp
+            {% endfor %}
+        </tr>
+        <br>
+        <br>
+        <tr>Model Girdi Zaman Aralığı &nbsp
+            {{ form.model_input_interval_in_hours }} saat
+        </tr>
+        <br>
+        <br>
+        <tr>Model Çıktı Zaman Aralığı &nbsp
+            {{ form.model_output_interval_in_minutes }} dakika
+        </tr>
+        <br>
+        <br>
+        <tr>
+            <input style="background-color:#7d7688; cursor:pointer;"
+                   value="ungrib.exe Programını Çalıştır"
+                   type="submit"
+                   name="ungrib.exe"
+                   id="ungrib.exe"
+                   onclick="var modal = document.getElementById('myModal');modal.style.display = 'block';">
+        </tr>
+        <br>
+        <br>
+        <hr>
+        <br>
+        </tbody>
+    </table>
+</form>
+<p> NOT: Başlangıç ve sınır koşulu olarak NCEP/GFS modelinin çıktıları kullanılmaktadır. 0.5 derece çözünürlükteki
+    GFS verilerinin sahip olduğu en
+    yüksek zaman frekansı 3 saattir. </p>
 
-            <tr>
-                Simülasyon Başlangıç Tarihi &nbsp &nbsp &nbsp &nbsp
-                <input type="date"
-                                             id="start_date"
-                                             name="start_date"
-                       min="2021-12-01"
-                       max="2100-10-16"
-                                             value="2023-07-20">(aa-gg-yyyy) &nbsp &nbsp</tr>
-            <br>
-            <hr>
-            <br>
-            <tr>
-              Simülasyon Başlangıç Saati &nbsp &nbsp &nbsp
-
-              <input type="radio" id="gfsBaslangicSaati1" name="gfsBaslangicSaati" value="00" checked>
-              <label for="gfsBaslangicSaati1">00 &nbsp</label>
-              <input type="radio" id="gfsBaslangicSaati2" name="gfsBaslangicSaati" value="06">
-              <label for="gfsBaslangicSaati2">06 &nbsp</label>
-              <input type="radio" id="gfsBaslangicSaati3" name="gfsBaslangicSaati" value="12">
-              <label for="gfsBaslangicSaati3">12 &nbsp</label>
-              <input type="radio" id="gfsBaslangicSaati4" name="gfsBaslangicSaati" value="18">
-              <label for="gfsBaslangicSaati4">18 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</label>
-            </tr>
-              <br>
-            <hr>
-            <br>
-            <tr>Simülasyon Bitiş Tarihi  &nbsp &nbsp &nbsp &nbsp &nbsp
-                <input type="date"
-                                          id="end_date"
-                                          name="end_date"
-                       min="2021-12-01"
-                       max="2100-10-16"
-                                          value="2023-07-20"> (aa-gg-yyyy) </tr>
-            <br>
-            <hr>
-            <tr>
-             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Simülasyon Bitiş Saati &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-              <input type="radio" id="gfsBitisSaati1" name="gfsBitisSaati" value="00">
-              <label for="gfsBitisSaati1">00 &nbsp</label>
-              <input type="radio" id="gfsBitisSaati2" name="gfsBitisSaati" value="03" checked>
-              <label for="gfsBitisSaati2">03 &nbsp</label>
-              <input type="radio" id="gfsBitisSaati3" name="gfsBitisSaati" value="06">
-              <label for="gfsBitisSaati3">06 &nbsp</label>
-              <input type="radio" id="gfsBitisSaati4" name="gfsBitisSaati" value="09">
-              <label for="gfsBitisSaati4">09 &nbsp</label>
-              <input type="radio" id="gfsBitisSaati5" name="gfsBitisSaati" value="12">
-              <label for="gfsBitisSaati5">12 &nbsp</label>
-              <input type="radio" id="gfsBitisSaati6" name="gfsBitisSaati" value="15">
-              <label for="gfsBitisSaati6">15 &nbsp</label>
-              <input type="radio" id="gfsBitisSaati7" name="gfsBitisSaati" value="18">
-              <label for="gfsBitisSaati7">18 &nbsp</label>
-              <input type="radio" id="gfsBitisSaati8" name="gfsBitisSaati" value="21">
-              <label for="gfsBitisSaati8">21 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</label>
-            </tr>
-            <br>
-            <hr>
-            <br>
-            <tr>Zaman Aralığı &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<input type="text"
-                                                    id="interval_seconds"
-                                                    name="interval_seconds"
-                                                    value="3"> saat </tr>
-            <br>
-            <hr>
-            <br>
-             <tr><input style="background-color:#7d7688; cursor:pointer;" value="ungrib.exe Programını Çalıştır" type="submit"
-                                                name="ungrib.exe"
-                                                id="ungrib.exe"
-             onclick="var modal = document.getElementById('myModal');modal.style.display = 'block';"></tr>
-            <br>
-            <br>
-            <hr>
-            <br>
-            <p> NOT: Başlangıç ve sınır koşulu olarak NCEP/GFS modelinin çıktıları kullanılmaktadır. 0.5 derece çözünürlükteki GFS verilerinin sahip olduğu en
-              yüksek zaman frekansı 3 saattir. </p>
-
-          <p> <em> NOT: Başlangıç ve bitiş saatlerinin UTC olarak girilmesi gerektiğini unutmayın.</em></p>
-          </tbody>
-        </table>
-    </form>
+<p><em> NOT: Başlangıç ve bitiş saatlerinin UTC olarak girilmesi gerektiğini unutmayın.</em></p>
 {% endblock content %}
