--- a/app/run_wrf/templates/run_wrf/domain.html
+++ b/app/run_wrf/templates/run_wrf/domain.html
@@ -14,7 +14,8 @@
 <form method="post" action="{{ url_for('run_wrf_bp.domain') }}">
     <div>
         <br>
-        <img src="{{ url_for('run_wrf_bp.static', filename='wps_show_dom.png') }}" alt="wpsdomain" style="width:30%">
+        <img src="{{ url_for('run_wrf_bp.static', filename='wps_show_dom.png') }}" alt="wpsdomain"
+             style="width: 50%; height: 50%;">
     </div>
         <br>
         <input style="background-color:#7d7688; cursor:pointer;" value="Geogrid ve Metgrid programlarını çalıştırın"
