--- a/app/file_selection/templates/file_selection/index.html
+++ b/app/file_selection/templates/file_selection/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="select-file-index-content">
-    <p>Welcome to File Selection index Page</p>
+    {% include 'file_selection/forms/select_file.html' %}
 </div>
 {% endblock %}
