--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,7 +2,7 @@
 <div class="navbar-content">
     <nav>
       <ul class="nav-items">
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Index</a></li>
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Anasayfa</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('run_wrf_bp.index') }}">WRF Çalıştır</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('file_selection_bp.index') }}">Dosya Seç</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('map_bp.index') }}">Görselleştir</a></li>
