add text to index page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,21 @@
 
 {% block content %}
 <div class="home">
-    <h2 style="padding-top: 20px;">Welcome to WRF-ONLINE</h2>
+    <h2 style="padding-top: 20px;">Çevrimiçi WRF Projesine Hoşgeldiniz</h2>
+    <p>Web arayüzü üç ana modülden oluşmaktadır.
+    <dl style="">
+        <dt><b>WRF Çalıştırma Modülü:</b>
+        <dd>Bu modülü kullanarak güncel GFS verileri ile WRF modelini çalıştırabilirsiniz.</dd>
+        <br>
+        <dt><b>Dosya Seçme Modülü:</b></dt>
+        <dd>Bu modülü kullanarak WRF çıktı dosyaları arasında gezip, runlar hakkında meta bilgilere ulaşabilirsiniz.
+        </dd>
+        <br>
+        <dt><b>Görselleştirme Modülü:</b></dt>
+        <dd>Bu modülü kullanarak WRF çıktılarınız ile çeşitli görseller yaratabilirsiniz.</dd>
+    </dl>
+    <br>
+    <h3>İstediğiniz modüle yukarıdaki navigasyon barından ulaşabilirsiniz.</h3>
+    </p>
 </div>
 {% endblock %}
